Homework 3.6 tests student